# Philosophical-Engine

./: .env  .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  commands.txt  context_summary.md  docker-compose.yml  engine_core.py  evaluation_report.py  ingestion.py  inspect_deepchecks.py  main.py  mlflow.db  models_supervised.py  models_unsupervised.py  notify.py  preprocessing.py  prompt.md  pyproject.toml  report_prompt_context.md  requirements.txt  run_locally.ps1  taxonomy.py  train.py  validation.py
Docker/: .dockerignore  backend.dockerfile  docker_complete.dockerfile  model_training.dockerfile
app/: main.py
backend/: Dockerfile  alembic.ini  config.py  database.py  main.py  requirements.txt
data/: dataset.json
docker/: Dockerfile  docker-compose.yml
docs/: App.css  index.html
evaluation_results/: edge_cases.txt
frontend/: Dockerfile  app.js  index.html  package-lock.json  package.json  style.css  tailwind.config.ts  vite.config.ts
models/: logreg.pkl  nn_embeddings.pt  rf.pkl
notebooks/: experiment_comparison.ipynb
pipeline/: deployment.yml  philosophical_pipeline.py
reports/: clusters.json
scraper/: gutenberg_scraper.py
scripts/: evaluate_models.py  run_demo.ps1
src/: __init__.py  api.py  data_loader.py  feature_engineering.py  inference.py  model.py  models.py  preprocessor.py  recommender.py  service.py  similarity.py  vectorizer.py
tests/: __init__.py  conftest.py  deepchecks_suite.py  test_api.py  test_model.py  test_preprocessor.py  test_training_and_checks.py  test_workflow_reporting.py
workflows/: main_flow.py  (+1 more)
(+156 files in other folders)
